# undoomed

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  LICENSE  README.md  agent.md  background.js  config.js  content.js  documentation.md  index.html  manifest.json  md.js  options.css  options.html  options.js  popup.css  popup.html  popup.js  pyproject.toml  requirements.txt  smoke_test.py  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/undoomed/: __init__.py  cli.py  server.py  socratic_reviewer.py
src/undoomed.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vscode-extension/: README.md  extension.js  package.json
website/: index.html  package-lock.json  package.json
website/scripts/: make-extension-zip.mjs
website/src/: App.jsx  index.css
website/src/components/: AgentModal.jsx  BrowserDemo.jsx  Cta.jsx  Downloads.jsx  ExtensionModal.jsx  Faq.jsx  Footer.jsx  Hero.jsx  HowItWorks.jsx  LogoMark.jsx  Modal.jsx  Nav.jsx  VsCodeModal.jsx  Wordmark.jsx
